# faultline

./: .env.example  .gitignore  Cargo.toml  Containerfile.dev  Containerfile.prod  README.md  compose.yaml
assets/: i18n-shared.ftl
assets/i18n/en-US/: main.ftl
assets/static/: 404.html  app.css  app.js  cybercore.min.css
assets/views/: base.html
assets/views/home/: index.html
config/: development.yaml  production.yaml  test.yaml
dev/: ci.sh  entrypoint.sh  setup.sh
migration/: Cargo.toml
migration/src/: lib.rs
src/: app.rs  lib.rs
src/controllers/: fallback.rs  home.rs  mod.rs
src/initializers/: view_engine.rs
src/models/: mod.rs
src/models/_entities/: mod.rs  prelude.rs
src/views/: home.rs  mod.rs
